feat: react up/down vote, fix: show youtube video

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -35,6 +35,13 @@
   -webkit-text-fill-color: transparent;
 }
 
+.react-player video {
+  position: relative;
+  left: 0;
+  top: 0;
+  transform: none;
+}
+
 // general
 @import "./scss/custom/general";
 @import "./scss/custom/font";
